--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background-image: url('../../src/assets/img/logo.rus.png');
+  background-image: url('../../src/assets/img/logo_rus_png_2.png');
   background-position: center;
   background-size: cover;
 }
