--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -2,7 +2,7 @@
 // Toshi the dog from https://unsplash.com/@charlesdeluvio - what a funny dog...
 
 .bg-login-image {
-  background-image: url('../../src/assets/img/logo.rus.png');
+  background-image: url('../../src/assets/img/logo_rus_png_2.png');
   width: 100;
   height: 100;
   background-position: center;
